feat: logo for navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
     </div>
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a href="/" class="navbar-item">Home</a>
+        <a href="/" class="navbar-item"><img alt="saadhan svg" src="{{ url_for('static', filename='assets/svgs/logo.svg') }}"></a>
         <a href="/how-to-contribute" class="navbar-item">How to contribute</a>
         <a href="/contributors" class="navbar-item">Contributors</a>
         <a href="https://wiki.developersindia.in/" class="navbar-item">Wiki</a>
@@ -61,7 +61,6 @@
   <main>
     <div class="content is-vcentered has-text-centered">
       <figure class="is-2 is-center">
-        <img alt="No data to display" src="{{ url_for('static', filename='assets/svgs/logo.svg') }}">
       </figure>
       <h1 class="title is-2 is-center">
         <a href="/">saadhan</a> - resource hub by <a href="https://reddit.com/r/developersIndia">r/DevelopersIndia</a>
