feat: tailwind cdn

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/developersIndia/assets/main/logo.svg">
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/custom.css') }}">
   <script src="https://unpkg.com/htmx.org@1.8.4"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
