--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -11,6 +11,8 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    padding-right: 1rem;
+    padding-left: 1rem;
 }
 
 main {
@@ -133,8 +135,8 @@ body {
     margin-right: 0.5rem;
     margin-left: 0.5rem;
   }
-  
-        .secondaryButton {
-          margin-right: 0.5rem;
-          margin-left: 0.5rem;
-        }
+ 
+  .secondaryButton {
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
+  }
